@@ -11,7 +11,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -38,7 +37,7 @@ public class ShopService {
     public List<ShopResponseDto> getAllShops() {
         return shopRepository.findAll().stream()
                 .map(shopMapper::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ShopResponseDto updateShop(Long id, ShopRequestDto shopDto) {
